# pkm

./: .gitignore  .pkm  .semantic-release.toml  2026-04-18-autonomous-pkm-agents.md  CHANGELOG.md  Consolidated-Agent-Architecture-2026.md  Organization-Log-2026-04-19.md  PKM-Automation-Architecture.md  README.md  parse_changelog.py  probe.py  test_daemon_edit.py  test_mistletoe.py  test_mistletoe_custom.py  test_perf.py
cli/: .pkm  CHANGELOG.md  dummy_graph.json  install.sh  measure_index_load.py  measure_index_load_huge.py  measure_mem.py  pyproject.toml  test_bug.py  test_dedup.py
cli/src/pkm/: __init__.py  __main__.py  _install_source.py  _memory_types.py  changelog.py  cli.py  config.py  daemon.py  editor.py  frontmatter.py  graph.py  mcp_server.py  models.py  sandbox.py  search_engine.py  skill  tasks.py  version_check.py  wikilinks.py  worker.py
cli/src/pkm/commands/: __init__.py  _trash.py  agent.py  ask.py  config.py  consolidate.py  daemon.py  daily.py  data.py  graph.py  hook.py  links.py  maintenance.py  mcp.py  memory.py  notes.py  search.py  setup.py  tag_commands.py  update.py  vault.py  workflow.py
cli/src/pkm/tools/: __init__.py  consolidate.py  daily.py  links.py  log.py  maintenance.py  notes.py  (+2 more)
cli/tests/: __init__.py  conftest.py  test_agent_hooks.py  test_ask.py  test_backlinks.py  test_config_commands.py  test_consolidate.py  test_daemon_shutdown.py  test_daily.py  test_data.py  test_e2e_graphify.py  test_get_graph_context_tier.py  test_graph_enriched.py  test_graph_neighbors.py  test_graph_surprising.py  test_hook_new_features.py  test_hooks.py  test_install_e2e.sh  test_links.py  test_maintenance.py  test_mcp_server.py  test_memory.py  test_notes.py  test_search_cmd.py  test_search_engine.py  test_search_output.py  test_setup_cmd.py  test_shell_aliases.py  test_tag_commands.py  test_tasks.py  test_vault_commands.py  test_vault_naming.py  test_wikilinks.py  test_workflow_commands.py  test_workflows.py
cli/tests/tools/: test_asyncio_check.py  test_consolidate_tools.py  test_links_tools.py  test_log_tools.py  test_maintenance_tools.py  test_tags_tools.py
(+110 files in other folders)
