[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkm"
version = "2.12.1"
description = "Personal Knowledge Management CLI for Obsidian vaults"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
pkm = "pkm.cli:main"

[project.optional-dependencies]
search = [
    "sentence-transformers>=2.0",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pkm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_variables = ["src/pkm/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
upload_to_pypi = false
upload_to_release = false
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "style", "test", "docs", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
