[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkm"
version = "2.46.0"
description = "Personal Knowledge Management CLI for Obsidian vaults"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "mcp>=1.20",
    "mistletoe>=1.0",
    "networkx>=3.0",
]

[project.scripts]
pkm = "pkm.cli:main"

[project.optional-dependencies]
search = [
    "sentence-transformers>=2.0",
    "numpy>=1.24",
    "litellm>=1.0.0",
    "tiny-agent-py @ git+https://github.com/ksm0709/tiny-agent-py.git",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pkm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
